add simple authorization, logout and registration
