# docs/swagger.json
@@ -133,6 +133,15 @@
                     "courses"
                 ],
                 "summary": "Get all existing courses",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Courses title pattern",
+                        "name": "title_pattern",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -321,6 +330,36 @@
                             "type": "string"
                         }
                     }
+                }
+            }
+        },
+        "/ping/{name}": {
+            "get": {
+                "description": "very very friendly response",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Tests"
+                ],
+                "summary": "Show hello text",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/app.pingResp"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "app.pingResp": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string"
                 }
             }
         }
